fixed text wrapping and image overflow issue in item view

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -216,4 +216,9 @@ a p {
 
 .item-display-header {
 	font-size: 2rem;
+	margin-top: 0;
+}
+
+.item-display-subheader {
+	font-size: 1.75rem;
 }
